app/routes/chats.css
.chats {
  width: 80%;
  height: 95%;
  display: flex;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: var(--shadows-small);
  max-height: 1300px;
  max-width: 1500px;
}

.chats__items {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  width: 30%;
  background-color: var(--colors-white);
  box-shadow: var(--shadows-inner);
}

.chats__items-user {
  background-color: var(--colors-gray);
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 12px 15px;
  box-shadow: var(--shadows-inner);
}

.chats__items-user h2 {
  color: var(--colors-black);
  font-weight: bold;
  font-size: calc(1rem * 16 / 16);
}

.chats__items-user button {
  background-color: var(--colors-teal-600);
  border-radius: 2px;
  width: 26px;
  height: 26px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: var(--shadows-medium);
}

.chats__items-user button svg {
  width: 16px;
  height: 16px;
}

.chats__items-search {
  margin-top: 10px;
  background-color: var(--colors-gray);
  border-radius: 6px;
  display: flex;
  align-items: center;
  padding: 0 10px;
  column-gap: 5px;
  width: 80%;
  height: 35px;
}

.chats__items-search svg {
  width: 20px;
  height: 20px;
}

.chats__items-search input {
  width: 80%;
  height: 100%;
  color: var(--colors-teal-800);
  font-size: calc(1rem * 14 / 16);
  font-weight: 400;
  background-color: var(--colors-gray);
}

.chats__items-chats {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  width: 100%;
  border-top: 2px solid var(--colors-gray);
  margin-top: 10px;
  overflow-y: scroll;
}

.chats__items-chats a {
  width: 100%;
  display: flex;
  align-items: center;
  padding: 10px 20px;
  column-gap: 30px;
  border-bottom: 2px solid var(--colors-gray);
}

.chats__items-chats p {
  font-weight: 600;
  font-size: calc(1rem * 18 / 16);
  color: var(--colors-teal-800);
}

.chats__items-chats img {
  width: 45px;
  height: 45px;
  border-radius: 100%;
}

.chats__items-chats svg {
  width: 45px;
  height: 45px;
}

.chats__items-chats-none {
  margin-top: 50px;
  font-weight: 500;
  font-size: calc(1rem * 13 / 16);
  color: var(--colors-black);
  font-weight: bold;
}

.chats__outlet-wrapper {
  width: 70%;
  height: 100%;
  background-color: var(--colors-gray);
  position: relative;
}

